--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,10 @@
 body {
-    background-color: black;
+    /* background-color: black; */
+    background-image: url('https://wallpaperaccess.com/full/3672714.png');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+
 }
 
 canvas {
@@ -16,25 +21,25 @@ canvas {
     
 .gameTitle { 
         grid-area: 1 / 2 / 2 / 3; 
-        background-color: black;
+        /* background-color: black; */
         color: gold;
         text-align: center;
     }
     
 .gameboard { 
         grid-area: 2 / 2 / 3 / 3; 
-        background-color: lightgray;
+        /* background-color: lightgray; */
     }
     
 .instructions { 
         grid-area: 1 / 1 / 3 / 2; 
-        background-color: black;
+        /* background-color: black; */
         color: gold;
     }
 
 .buttons{ 
     grid-area: 1 / 3 / 3 / 4; 
-    background-color: black;
+    /* background-color: black; */
     color: gold;
 }
 
